# OpenGLEngine

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Compile.bat  Compile_and_Run.bat  Run.bat  UpdateProject.bat  cmake_install.cmake  compile_commands.json  project_folder.txt
.cache/clangd/index/: GraphEditor.cpp.7E0243B2F2108BE7.idx  GraphEditor.h.1D83AE5FC53C9117.idx  ImCurveEdit.cpp.27B702F320A74711.idx  ImCurveEdit.h.EE5CCBC285B3FDC8.idx  ImGradient.cpp.07E3327106DBAC33.idx  ImGradient.h.1085ECBFF0F47793.idx  ImGuizmo.cpp.70670C0EC05001E1.idx  ImGuizmo.h.B7FCD0D3E2B4E507.idx  ImSequencer.cpp.E5D56FA22E0C67C3.idx  ImSequencer.h.723244756F15E419.idx  OBJ_Loader.h.A1109093EB141D74.idx  OBJ_Loader.h.DC40FE1D1F20D084.idx  _fixes.hpp.43A8DC925DFBFED1.idx  _fixes.hpp.E8EF81BFEC5B8FB6.idx  _matrix_vectorize.hpp.B5A1251909EC8206.idx  _noise.hpp.5CB4335E31E512E6.idx  _vectorize.hpp.54B2CB2A3DAEDCE7.idx  _vectorize.hpp.61F77DD326D379D7.idx  bitfield.hpp.13A25C2CD731B19A.idx  bitfield.inl.E6D37A76FC327E96.idx  camera_component.cpp.792A02EC78CCA3C5.idx  camera_component.h.C3BE0A85050C9615.idx  color_space.hpp.192069F4F83AB2A5.idx  color_space.inl.F2F08F7F66B9A6F3.idx  command.cpp.2464AB9E6D161B9B.idx  command.h.AEAB7AC71D54BABB.idx  common.hpp.002B11BB5F9EE191.idx  common.hpp.5F98FF71B96A07DA.idx  component.cpp.681F760A0407601C.idx  component.h.00A15DBA5F199911.idx  compute_common.hpp.5E70C8F893C6C07E.idx  compute_common.hpp.DF01BF472A4B1EBD.idx  compute_vector_decl.hpp.AE06F1CE5EF49657.idx  compute_vector_relational.hpp.269F5BBC1FFFC475.idx  compute_vector_relational.hpp.DF4CB5FC38A55E91.idx  constants.hpp.2A2752C010213B04.idx  constants.hpp.DE1F9ACA5DAB0AD1.idx  constants.inl.435D603173FDE8A0.idx  constants.inl.D15C9C5C571AF7DB.idx  context.c.A95B4E0F022D3A72.idx  (+684 more)
data/engine/: Engine-Paurtatil.lib  Engine.lib
data/engine/Debug/: Engine.lib
data/fonts/wachinanga/: Free Fonts 2013.URL  OFL.txt
data/models/Axe/: VikingAxe.mtl
data/models/Bayonetta/: Bayonetta.mtl
data/models/Mech/: license.txt
data/models/Overlord/: Overlord.mtl
data/models/Overlord/textures/: Overlord.mtl
data/models/Yamato/old/source/Space_Battleship_Yamato_[Clean]_v003_objFiles/: Space_Battleship_Yamato_[Clean]_v003.mtl
data/models/dialga/: Dialga.dae  Dialga.fbx
data/models/gomorrah/: gomorrah.mtl
data/models/tower22/: objTower.mtl
data/models/tower22/textures/: ROCK20LB_sRGB_ACEScg.JPG.tx  ROCK20LB_sRGB_scene-linear Rec 709_sRGB.JPG.tx  Wall2_sRGB_ACEScg.jpg.tx  Wall3 copy_sRGB_ACEScg.jpg.tx  a3_sRGB_ACEScg.jpg.tx  as12lealfa_sRGB_scene-linear Rec 709_sRGB.tif.tx  bark008b_sRGB_ACEScg.jpg.tx  bark008b_sRGB_scene-linear Rec 709_sRGB.jpg.tx  brck49Lb_sRGB_ACEScg.jpg.tx  brck49Lb_sRGB_scene-linear Rec 709_sRGB.jpg.tx  brck4pared_sRGB_ACEScg.jpg.tx  brck4pared_sRGB_scene-linear Rec 709_sRGB.jpg.tx  entr002M_sRGB_ACEScg.jpg.tx  entr002Mb_sRGB_ACEScg.jpg.tx  entr137M_sRGB_ACEScg.jpg.tx  flagred_sRGB_ACEScg.jpg.tx  germany010 - còpia_sRGB_ACEScg.jpg.tx  germany010PILLAR_sRGB_scene-linear Rec 709_sRGB.jpg.tx  germany010b_sRGB_ACEScg.jpg.tx  germany010b_sRGB_scene-linear Rec 709_sRGB.jpg.tx  germany0WHITE_sRGB_ACEScg.jpg.tx  hungary001_sRGB_ACEScg.jpg.tx  hungary001b_sRGB_ACEScg.jpg.tx  oldgold copy_sRGB_ACEScg.jpg.tx  oldgoldespecular_sRGB_ACEScg.jpg.tx  patio03a_sRGB_ACEScg.jpg.tx  patio03b_sRGB_ACEScg.jpg.tx  wind15L_sRGB_ACEScg.jpg.tx  wind15Lb_sRGB_ACEScg.jpg.tx  wndw107M_sRGB_ACEScg.jpg.tx  wndw107Mb_sRGB_ACEScg.jpg.tx
data/models/tower22/textures/.mayaSwatches/: CNCR07L.JPG_hcm.swatch  CNCR07LB.JPG_hcm.swatch  FULLA-ARBRE.png_hcm.swatch  FULLA-ARBRE5.png_hcm.swatch  GRND01L.JPG_hcm.swatch  GRND01LB.JPG_hcm.swatch  ROCK20L.JPG_hcm.swatch  ROCK20LB.JPG_hcm.swatch  ROCK23L.JPG_hcm.swatch  ROCK23LB.JPG_hcm.swatch  Sky-Clouds-Background-11.jpg_hcm.swatch  WOOD05L.JPG_hcm.swatch  WOOD05LB.JPG_hcm.swatch  WOOD0red.jpg_hcm.swatch  WOOD0sss.jpg_hcm.swatch  WOOD22L.JPG_hcm.swatch  WOOD22LB.JPG_hcm.swatch  WOODwhite.jpg_hcm.swatch  Wall2.jpg_hcm.swatch  Wall3 copy.jpg_hcm.swatch  as12lealfa.tif_hcm.swatch  bark008.jpg_hcm.swatch  bark008b.jpg_hcm.swatch  brck49Lb.jpg_hcm.swatch  brck4pared.jpg_hcm.swatch  clay13XL.jpg_hcm.swatch  clay13XLb.jpg_hcm.swatch  egypt001b.jpg_hcm.swatch  england020.jpg_hcm.swatch  england020b.jpg_hcm.swatch  entr002M.jpg_hcm.swatch  entr002Mb.jpg_hcm.swatch  entr137M.jpg_hcm.swatch  falg.jpg_hcm.swatch  flag.jpg_hcm.swatch  flagred.jpg_hcm.swatch  fram05L.jpg_hcm.swatch  fram05Lb.jpg_hcm.swatch  front1.jpg_hcm.swatch  front_statue.jpg_hcm.swatch  (+54 more)
docs/: Engine_UML.graphml
include/engine/: command.h  component.h  core.h  display_list.h  engine_input.h  entity.h  entity_manager.h  mesh.h  primitive.h  shader.h  window.h
include/engine/components/: camera_component.h  light_component.h  material_component.h  mesh_component.h  render_component.h  shader_component.h  skybox_component.h  transform_component.h
src/engine/: command.cpp  component.cpp  core.cpp  display_list.cpp  engine_input.cpp  entity.cpp  entity_manager.cpp  main.cpp  mesh.cpp  primitive.cpp  shader.cpp  window.cpp
src/engine/components/: camera_component.cpp  light_component.cpp  material_component.cpp  mesh_component.cpp  render_component.cpp  shader_component.cpp  skybox_component.cpp  transform_component.cpp
src/engine/shaders/: default.frag  default3D.frag  default3D.vert  hello_triangle.frag  hello_triangle.vert  skybox.frag  skybox.vert
src/engine/shaders/core/: fragment_core.glsl  framebuffer_fragment.glsl  framebuffer_vertex.glsl  vertex_core.glsl
src/examples/example1/: main.cpp
tools/: CMakeLists.txt  clean.bat  generate22.bat  premake5.lua
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
